Fix code block overflow.

--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,7 @@ pre {
 	background-color: #161616;
 	color: #e9e9e9;
 	padding: .5em .75em;
+	overflow: auto;
 }
 
 
